<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context="com.example.piotrek.bmi238493.MainActivity">

    <TextView
        android:id="@+id/mass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/mass_si"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/mass_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/height_si"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/height_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/calc"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="end"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/units"
            android:layout_gravity="center_horizontal" />

        <Switch
            android:id="@+id/switch_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/units_si" />
    </LinearLayout>


</LinearLayout>
